.antlr/QueryLanguageParser.java
// Generated from c:/Users/ebbew/Desktop/OSCAR_NEXUS/QueryLanguage.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class QueryLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, ENTITY_TYPE=23, ENTITY_TYPE_PLURAL=24, 
		FILTERABLE_PROPERTY=25, SHOWABLE_PROPERTY=26, COLLECTION_IDENTIFIER=27, 
		SCHEMA_IDENTIFIER=28, TAG_IDENTIFIER=29, CONSTANT_IDENTIFIER=30, BATCH_IDENTIFIER=31, 
		DATASET_IDENTIFIER=32, IDENTIFIER=33, LITERAL_VALUE=34, WILDCARD_STRING_LITERAL=35, 
		STRING_LITERAL=36, DATATYPE=37, COMPARISON_OPERATOR=38, UNION_OPERATOR=39, 
		UUID=40, NUMBER=41, WS=42;
	public static final int
		RULE_query = 0, RULE_findstatement = 1, RULE_collectstatement = 2, RULE_loadstatement = 3, 
		RULE_deletestatement = 4, RULE_createstatement = 5, RULE_create_tag_key_statement = 6, 
		RULE_create_tag_value_statement = 7, RULE_create_schema_statement = 8, 
		RULE_create_collection_statement = 9, RULE_schema_body = 10, RULE_fields_defenition = 11, 
		RULE_field_defenition = 12, RULE_discovery_clause = 13, RULE_discovery_clause_with_match = 14, 
		RULE_collection_include_clause = 15, RULE_filter_clause = 16, RULE_filter_condition = 17, 
		RULE_property_name_filter_condition = 18, RULE_property_value_filter_condition = 19, 
		RULE_tag_filter_condition = 20, RULE_match_clause = 21, RULE_collection_expression = 22, 
		RULE_result_specifiers = 23, RULE_columns_specifier = 24, RULE_constants_specifier = 25, 
		RULE_show_specifier = 26, RULE_limit_specifier = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "findstatement", "collectstatement", "loadstatement", "deletestatement", 
			"createstatement", "create_tag_key_statement", "create_tag_value_statement", 
			"create_schema_statement", "create_collection_statement", "schema_body", 
			"fields_defenition", "field_defenition", "discovery_clause", "discovery_clause_with_match", 
			"collection_include_clause", "filter_clause", "filter_condition", "property_name_filter_condition", 
			"property_value_filter_condition", "tag_filter_condition", "match_clause", 
			"collection_expression", "result_specifiers", "columns_specifier", "constants_specifier", 
			"show_specifier", "limit_specifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'FIND'", "'COLLECT'", "'DEEP'", "'AS'", "'LOAD'", "'DELETE'", 
			"'CREATE'", "'TAG'", "'FOR'", "'SCHEMA'", "'COLLECTION'", "'FROM'", "'INFO'", 
			"'COLUMNS'", "'CONSTANTS'", "','", "'IN'", "'FILTER'", "'='", "'MATCH'", 
			"'SHOW'", "'LIMIT'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'STRING'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "ENTITY_TYPE", 
			"ENTITY_TYPE_PLURAL", "FILTERABLE_PROPERTY", "SHOWABLE_PROPERTY", "COLLECTION_IDENTIFIER", 
			"SCHEMA_IDENTIFIER", "TAG_IDENTIFIER", "CONSTANT_IDENTIFIER", "BATCH_IDENTIFIER", 
			"DATASET_IDENTIFIER", "IDENTIFIER", "LITERAL_VALUE", "WILDCARD_STRING_LITERAL", 
			"STRING_LITERAL", "DATATYPE", "COMPARISON_OPERATOR", "UNION_OPERATOR", 
			"UUID", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QueryLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QueryLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public FindstatementContext findstatement() {
			return getRuleContext(FindstatementContext.class,0);
		}
		public CollectstatementContext collectstatement() {
			return getRuleContext(CollectstatementContext.class,0);
		}
		public LoadstatementContext loadstatement() {
			return getRuleContext(LoadstatementContext.class,0);
		}
		public CreatestatementContext createstatement() {
			return getRuleContext(CreatestatementContext.class,0);
		}
		public DeletestatementContext deletestatement() {
			return getRuleContext(DeletestatementContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				findstatement();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				collectstatement();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				loadstatement();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				createstatement();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				deletestatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FindstatementContext extends ParserRuleContext {
		public TerminalNode ENTITY_TYPE_PLURAL() { return getToken(QueryLanguageParser.ENTITY_TYPE_PLURAL, 0); }
		public Discovery_clauseContext discovery_clause() {
			return getRuleContext(Discovery_clauseContext.class,0);
		}
		public Result_specifiersContext result_specifiers() {
			return getRuleContext(Result_specifiersContext.class,0);
		}
		public FindstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_findstatement; }
	}

	public final FindstatementContext findstatement() throws RecognitionException {
		FindstatementContext _localctx = new FindstatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_findstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__0);
			setState(64);
			match(ENTITY_TYPE_PLURAL);
			setState(65);
			discovery_clause();
			setState(66);
			result_specifiers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CollectstatementContext extends ParserRuleContext {
		public TerminalNode SCHEMA_IDENTIFIER() { return getToken(QueryLanguageParser.SCHEMA_IDENTIFIER, 0); }
		public Discovery_clause_with_matchContext discovery_clause_with_match() {
			return getRuleContext(Discovery_clause_with_matchContext.class,0);
		}
		public TerminalNode COLLECTION_IDENTIFIER() { return getToken(QueryLanguageParser.COLLECTION_IDENTIFIER, 0); }
		public CollectstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collectstatement; }
	}

	public final CollectstatementContext collectstatement() throws RecognitionException {
		CollectstatementContext _localctx = new CollectstatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_collectstatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__1);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(69);
				match(T__2);
				}
			}

			setState(72);
			match(SCHEMA_IDENTIFIER);
			setState(73);
			discovery_clause_with_match();
			setState(74);
			match(T__3);
			setState(75);
			match(COLLECTION_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoadstatementContext extends ParserRuleContext {
		public TerminalNode DATASET_IDENTIFIER() { return getToken(QueryLanguageParser.DATASET_IDENTIFIER, 0); }
		public Result_specifiersContext result_specifiers() {
			return getRuleContext(Result_specifiersContext.class,0);
		}
		public LoadstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadstatement; }
	}

	public final LoadstatementContext loadstatement() throws RecognitionException {
		LoadstatementContext _localctx = new LoadstatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_loadstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__4);
			setState(78);
			match(DATASET_IDENTIFIER);
			setState(79);
			result_specifiers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeletestatementContext extends ParserRuleContext {
		public TerminalNode UUID() { return getToken(QueryLanguageParser.UUID, 0); }
		public DeletestatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deletestatement; }
	}

	public final DeletestatementContext deletestatement() throws RecognitionException {
		DeletestatementContext _localctx = new DeletestatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_deletestatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__5);
			setState(82);
			match(UUID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreatestatementContext extends ParserRuleContext {
		public Create_tag_key_statementContext create_tag_key_statement() {
			return getRuleContext(Create_tag_key_statementContext.class,0);
		}
		public Create_tag_value_statementContext create_tag_value_statement() {
			return getRuleContext(Create_tag_value_statementContext.class,0);
		}
		public Create_schema_statementContext create_schema_statement() {
			return getRuleContext(Create_schema_statementContext.class,0);
		}
		public Create_collection_statementContext create_collection_statement() {
			return getRuleContext(Create_collection_statementContext.class,0);
		}
		public CreatestatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createstatement; }
	}

	public final CreatestatementContext createstatement() throws RecognitionException {
		CreatestatementContext _localctx = new CreatestatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_createstatement);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				create_tag_key_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				create_tag_value_statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				create_schema_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				create_collection_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_tag_key_statementContext extends ParserRuleContext {
		public TerminalNode TAG_IDENTIFIER() { return getToken(QueryLanguageParser.TAG_IDENTIFIER, 0); }
		public Create_tag_key_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_tag_key_statement; }
	}

	public final Create_tag_key_statementContext create_tag_key_statement() throws RecognitionException {
		Create_tag_key_statementContext _localctx = new Create_tag_key_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_create_tag_key_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__6);
			setState(91);
			match(T__7);
			setState(92);
			match(TAG_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_tag_value_statementContext extends ParserRuleContext {
		public List<TerminalNode> TAG_IDENTIFIER() { return getTokens(QueryLanguageParser.TAG_IDENTIFIER); }
		public TerminalNode TAG_IDENTIFIER(int i) {
			return getToken(QueryLanguageParser.TAG_IDENTIFIER, i);
		}
		public Create_tag_value_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_tag_value_statement; }
	}

	public final Create_tag_value_statementContext create_tag_value_statement() throws RecognitionException {
		Create_tag_value_statementContext _localctx = new Create_tag_value_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_create_tag_value_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__6);
			setState(95);
			match(T__7);
			setState(96);
			match(TAG_IDENTIFIER);
			setState(97);
			match(T__8);
			setState(98);
			match(TAG_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_schema_statementContext extends ParserRuleContext {
		public TerminalNode SCHEMA_IDENTIFIER() { return getToken(QueryLanguageParser.SCHEMA_IDENTIFIER, 0); }
		public Schema_bodyContext schema_body() {
			return getRuleContext(Schema_bodyContext.class,0);
		}
		public Create_schema_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_schema_statement; }
	}

	public final Create_schema_statementContext create_schema_statement() throws RecognitionException {
		Create_schema_statementContext _localctx = new Create_schema_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_create_schema_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__6);
			setState(101);
			match(T__9);
			setState(102);
			match(SCHEMA_IDENTIFIER);
			setState(103);
			schema_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_collection_statementContext extends ParserRuleContext {
		public TerminalNode COLLECTION_IDENTIFIER() { return getToken(QueryLanguageParser.COLLECTION_IDENTIFIER, 0); }
		public Create_collection_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_collection_statement; }
	}

	public final Create_collection_statementContext create_collection_statement() throws RecognitionException {
		Create_collection_statementContext _localctx = new Create_collection_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_create_collection_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__6);
			setState(106);
			match(T__10);
			setState(107);
			match(T__11);
			setState(108);
			match(COLLECTION_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Schema_bodyContext extends ParserRuleContext {
		public List<Fields_defenitionContext> fields_defenition() {
			return getRuleContexts(Fields_defenitionContext.class);
		}
		public Fields_defenitionContext fields_defenition(int i) {
			return getRuleContext(Fields_defenitionContext.class,i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(QueryLanguageParser.STRING_LITERAL, 0); }
		public Schema_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema_body; }
	}

	public final Schema_bodyContext schema_body() throws RecognitionException {
		Schema_bodyContext _localctx = new Schema_bodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_schema_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(110);
				match(T__12);
				setState(111);
				match(STRING_LITERAL);
				}
			}

			setState(114);
			match(T__13);
			setState(115);
			fields_defenition();
			setState(116);
			match(T__14);
			setState(117);
			fields_defenition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fields_defenitionContext extends ParserRuleContext {
		public List<Field_defenitionContext> field_defenition() {
			return getRuleContexts(Field_defenitionContext.class);
		}
		public Field_defenitionContext field_defenition(int i) {
			return getRuleContext(Field_defenitionContext.class,i);
		}
		public Fields_defenitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields_defenition; }
	}

	public final Fields_defenitionContext fields_defenition() throws RecognitionException {
		Fields_defenitionContext _localctx = new Fields_defenitionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fields_defenition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			field_defenition();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15) {
				{
				{
				setState(120);
				match(T__15);
				setState(121);
				field_defenition();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Field_defenitionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(QueryLanguageParser.IDENTIFIER, 0); }
		public TerminalNode DATATYPE() { return getToken(QueryLanguageParser.DATATYPE, 0); }
		public Field_defenitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_defenition; }
	}

	public final Field_defenitionContext field_defenition() throws RecognitionException {
		Field_defenitionContext _localctx = new Field_defenitionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_field_defenition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(IDENTIFIER);
			setState(128);
			match(DATATYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Discovery_clauseContext extends ParserRuleContext {
		public Filter_clauseContext filter_clause() {
			return getRuleContext(Filter_clauseContext.class,0);
		}
		public Collection_include_clauseContext collection_include_clause() {
			return getRuleContext(Collection_include_clauseContext.class,0);
		}
		public Discovery_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_discovery_clause; }
	}

	public final Discovery_clauseContext discovery_clause() throws RecognitionException {
		Discovery_clauseContext _localctx = new Discovery_clauseContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_discovery_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(130);
				collection_include_clause();
				}
			}

			setState(133);
			filter_clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Discovery_clause_with_matchContext extends ParserRuleContext {
		public Collection_include_clauseContext collection_include_clause() {
			return getRuleContext(Collection_include_clauseContext.class,0);
		}
		public List<Filter_clauseContext> filter_clause() {
			return getRuleContexts(Filter_clauseContext.class);
		}
		public Filter_clauseContext filter_clause(int i) {
			return getRuleContext(Filter_clauseContext.class,i);
		}
		public List<Match_clauseContext> match_clause() {
			return getRuleContexts(Match_clauseContext.class);
		}
		public Match_clauseContext match_clause(int i) {
			return getRuleContext(Match_clauseContext.class,i);
		}
		public Discovery_clause_with_matchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_discovery_clause_with_match; }
	}

	public final Discovery_clause_with_matchContext discovery_clause_with_match() throws RecognitionException {
		Discovery_clause_with_matchContext _localctx = new Discovery_clause_with_matchContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_discovery_clause_with_match);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(135);
				collection_include_clause();
				}
			}

			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17 || _la==T__19) {
				{
				setState(140);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__17:
					{
					setState(138);
					filter_clause();
					}
					break;
				case T__19:
					{
					setState(139);
					match_clause();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Collection_include_clauseContext extends ParserRuleContext {
		public Collection_expressionContext collection_expression() {
			return getRuleContext(Collection_expressionContext.class,0);
		}
		public Collection_include_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collection_include_clause; }
	}

	public final Collection_include_clauseContext collection_include_clause() throws RecognitionException {
		Collection_include_clauseContext _localctx = new Collection_include_clauseContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_collection_include_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__16);
			setState(146);
			collection_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Filter_clauseContext extends ParserRuleContext {
		public Filter_conditionContext filter_condition() {
			return getRuleContext(Filter_conditionContext.class,0);
		}
		public Filter_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_clause; }
	}

	public final Filter_clauseContext filter_clause() throws RecognitionException {
		Filter_clauseContext _localctx = new Filter_clauseContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_filter_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__17);
			setState(149);
			filter_condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Filter_conditionContext extends ParserRuleContext {
		public Property_name_filter_conditionContext property_name_filter_condition() {
			return getRuleContext(Property_name_filter_conditionContext.class,0);
		}
		public Property_value_filter_conditionContext property_value_filter_condition() {
			return getRuleContext(Property_value_filter_conditionContext.class,0);
		}
		public Tag_filter_conditionContext tag_filter_condition() {
			return getRuleContext(Tag_filter_conditionContext.class,0);
		}
		public Filter_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_condition; }
	}
